# backupforge

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  DEPENDENCIES.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  cloudvm.rs  database.rs  docker.rs  filesystem.rs  lib.rs  proxmox.rs  ssh.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  hash.rs  lib.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  compression.rs  dedup.rs  encryption.rs  engine.rs  lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  prompts.rs  resources.rs  server.rs  tools.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  state.rs
crates/server/src/handlers/: auth.rs  jobs.rs  mod.rs  snapshots.rs  storage.rs  tenants.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  lib.rs  local.rs  manager.rs  s3.rs
docs/: ARCHITECTURE.md  INSTALLATION.md  MCP_SETUP.md
scripts/: run-dashboard.sh  setup.sh  test-mcp.sh
web-dashboard/: index.html
web-dashboard/css/: style.css
web-dashboard/js/: app.js
