[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/core",
    "crates/storage",
    "crates/agent",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BackupForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/backupforge"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Storage
rusoto_core = "0.48"
rusoto_s3 = "0.48"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# SSH
ssh2 = "0.9"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"

# Testing
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
