[package]
name = "backupforge-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
hex = "0.4"
