[package]
name = "backupforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
backupforge-common = { path = "../common" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Compression
zstd = { workspace = true }
lz4 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
