[package]
name = "backupforge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "backupforge-server"
path = "src/main.rs"

[dependencies]
backupforge-common = { path = "../common" }
backupforge-core = { path = "../core" }
backupforge-storage = { path = "../storage" }
backupforge-agent = { path = "../agent" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Database
sqlx = { workspace = true }

# Auth
jsonwebtoken = "9.3"
bcrypt = "0.15"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
